--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,5 +35,5 @@
     </div>
   <% end %>
   <!-- Link to view all posts by the user -->
-  <%= link_to "See all posts", user_posts_path(@user), class: 'button' %>
+  <%= link_to "See all posts", user_posts_path(@user), class: 'btn' %>
 </div>
