--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -88,14 +88,13 @@ a:hover {
 }
 
 /* Styling for pagination button */
-.button {
-  margin: 10px;
-  padding: 15px;
+.btn {
+  margin-left: 13%;
+  padding: 5px;
   border: 2px solid #333;
-  background-color: #333;
-  color: #fff;
   cursor: pointer;
   border-radius: 12px;
+  float: left;
 }
 
 /* Styling for the comments section */
