--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,7 +17,7 @@
       <!-- Individual comment section -->
       <div class="comment">
         <!-- Display comment author's name and the comment text -->
-        <p><%= comment.author.name %>: <%= comment.text %></p>
+        <p><%= comment.user.name %>: <%= comment.text %></p>
       </div>
     <% end %>
   </div>
