--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,5 @@
 <div class="container">
   <!-- User Information Section -->
-  <button>
-  <%= link_to "New post", new_user_post_path(@user), class: "back" %>
-</button>
   <div class="user_info">
     <div class="img">
       <!-- Display user photo using Rails image_tag helper -->
@@ -44,5 +41,5 @@
 
   <!-- Link to a paginated view of all user posts -->
   <%= link_to 'Pagination', user_posts_path(@user), class: 'btn' %>
-  
+  <%= link_to "New post", new_user_post_path(@user), class: "new-btn" %>
 </div>
