--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,12 +1,14 @@
+<!-- Link to go back to the post's show page -->
 <%= link_to 'Back', user_post_path(@post.author, @post) %>
 
-<h1>Add comment</h1>
+<!-- Section to add a new comment -->
+<h2>Add comment</h2>
 
+<!-- Form for adding a new comment -->
 <%= form_with(model: [@post, @comment], url: user_post_comments_path(@post.author, @post), class: "form") do |form| %>
-  <%= form.label :text %>
+  <!-- Text area for entering the comment text -->
   <%= form.text_area :text %>
 
-  <%= form.submit 'Add comment' %>
+  <!-- Submit button to add the comment -->
+  <%= form.submit 'Add comment', class: 'submit' %>
 <% end %>
-
-
