--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -40,6 +40,6 @@
   <% end %>
 
   <!-- Link to a paginated view of all user posts -->
-  <%= link_to 'Pagination', user_posts_path(@user), class: 'btn' %>
+  <%= link_to 'Pagination', user_posts_path(@user), class: 'btn pagination' %>
   <%= link_to "New post", new_user_post_path(@user), class: "new-btn" %>
 </div>
