--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,12 @@
     <%= f.label :name %><br />
     <%= f.email_field :name, autofocus: true, autocomplete: "name" %>
   </div>
-  
+
+  <div class="field">
+    <%= f.label :bio %><br />
+    <%= f.email_field :bio, autofocus: true, autocomplete: "bio" %>
+  </div>
+
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
